--- a/exams.html
+++ b/exams.html
@@ -5,6 +5,33 @@
     <title>Exam Schedules - St Paul Learning Centre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script>
+        // Firebase Config
+        const firebaseConfig = {
+            apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+            authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+            projectId: "my-school-st-paul-1455a",
+            storageBucket: "my-school-st-paul-1455a.appspot.com",
+            messagingSenderId: "122530310728",
+            appId: "1:122530310728:web:exampleid"
+        };
+
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        // Protect this page
+        auth.onAuthStateChanged(user => {
+            if (!user || user.email !== "nicholasbagenda@gmail.com") {
+                // Redirect unauthorized users to login
+                window.location.href = "login.html";
+            }
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -12,15 +39,17 @@
         <div class="motto">Strive For Success</div>
         <p>Empowering students, connecting families, supporting teachers.</p>
     </header>
-   <nav>
-    <a href="index.html">News & Announcements</a>
-    <a href="student-portal.html">Student Portal</a>
-    <a href="admissions.html">Admissions</a>
-    <a href="resources.html">Resources</a>
-    <a href="showcase.html">About Us</a>
-    <a href="contact.html">Contact</a>
-    <a href="parent-portal.html">Parent Portal</a>
-</nav>
+
+    <nav>
+        <a href="index.html">News & Announcements</a>
+        <a href="student-portal.html">Student Portal</a>
+        <a href="admissions.html">Admissions</a>
+        <a href="resources.html">Resources</a>
+        <a href="showcase.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="parent-portal.html">Parent Portal</a>
+    </nav>
+
     <section>
         <h2>Exam Schedules</h2>
         <p>Check out upcoming exam dates and download schedules for all grades.</p>
@@ -31,6 +60,7 @@
             <!-- Add more links as needed -->
         </ul>
     </section>
+
     <footer>
         &copy; 2025 St Paul Learning Centre. All rights reserved.
     </footer>
