--- a/notes.html
+++ b/notes.html
@@ -5,6 +5,32 @@
     <title>Class Notes - St Paul Learning Centre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script>
+        // Firebase Config
+        const firebaseConfig = {
+            apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+            authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+            projectId: "my-school-st-paul-1455a",
+            storageBucket: "my-school-st-paul-1455a.appspot.com",
+            messagingSenderId: "122530310728",
+            appId: "1:122530310728:web:exampleid"
+        };
+
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        // Protect page
+        auth.onAuthStateChanged(user => {
+            if (!user || user.email !== "nicholasbagenda@gmail.com") {
+                window.location.href = "login.html";
+            }
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -12,6 +38,7 @@
         <div class="motto">Strive For Success</div>
         <p>Empowering students, connecting families, supporting teachers.</p>
     </header>
+
     <nav>
         <a href="index.html">News & Announcements</a>
         <a href="student-portal.html">Student Portal</a>
@@ -21,6 +48,7 @@
         <a href="contact.html">Contact</a>
         <a href="parent-portal.html">Parent Portal</a>
     </nav>
+
     <section>
         <h2>Class Notes</h2>
         <p>Download class notes organized by subject and grade. More content coming soon!</p>
@@ -31,6 +59,7 @@
             <!-- Add more links as needed -->
         </ul>
     </section>
+
     <footer>
         &copy; 2025 St Paul Learning Centre. All rights reserved.
     </footer>
