--- a/register.html
+++ b/register.html
@@ -5,6 +5,51 @@
     <title>Student Registration - St Paul Learning Centre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+            authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+            projectId: "my-school-st-paul-1455a",
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getFirestore(app);
+
+        window.registerStudent = async function(event) {
+            event.preventDefault();
+            
+            const fullname = document.getElementById("fullname").value;
+            const email = document.getElementById("email").value;
+            const grade = document.getElementById("grade").value;
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            try {
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                const uid = userCredential.user.uid;
+                
+                await setDoc(doc(db, "students", uid), {
+                    fullname,
+                    email,
+                    grade,
+                    username,
+                    registeredAt: new Date().toISOString()
+                });
+
+                alert("✅ Registration successful! You can now login.");
+                window.location.href = "login.html";
+            } catch (error) {
+                alert("❌ Error: " + error.message);
+            }
+        };
+    </script>
 </head>
 <body>
     <header>
@@ -12,6 +57,7 @@
         <div class="motto">Strive For Success</div>
         <p>Empowering students, connecting families, supporting teachers.</p>
     </header>
+
     <nav>
         <a href="index.html">News & Announcements</a>
         <a href="student-portal.html">Student Portal</a>
@@ -21,9 +67,10 @@
         <a href="contact.html">Contact</a>
         <a href="parent-portal.html">Parent Portal</a>
     </nav>
+
     <section>
         <h2>Student Registration</h2>
-        <form class="register-form">
+        <form class="register-form" onsubmit="registerStudent(event)">
             <label for="fullname">Full Name:</label>
             <input type="text" id="fullname" name="fullname" required>
 
@@ -48,6 +95,7 @@
         </form>
         <p>Already registered? <a href="login.html">Login here</a>.</p>
     </section>
+
     <footer>
         &copy; 2025 St Paul Learning Centre. All rights reserved.
     </footer>
